[gd_scene load_steps=26 format=3 uid="uid://dc4u5jg5oawjf"]

[ext_resource type="Shader" uid="uid://d0mfg3ekdayor" path="res://shaders/Blink.gdshader" id="1_rbwnv"]
[ext_resource type="Script" uid="uid://s0tdwoo7f5ps" path="res://scripts/sprites/Boss_Stuff/boss.gd" id="2_7ymjk"]
[ext_resource type="Texture2D" uid="uid://bitlhgggyibxn" path="res://assets/spritesheets/l_shadow.png" id="3_sw4a1"]
[ext_resource type="Texture2D" uid="uid://bpiugp2wy6m1b" path="res://assets/spritesheets/boss.png" id="4_7jxvu"]
[ext_resource type="Script" uid="uid://s4bwc006fud4" path="res://scripts/sprites/Boss_Stuff/finite_state_machine.gd" id="5_nwhtm"]
[ext_resource type="Script" uid="uid://bdbi6inps63qj" path="res://scripts/sprites/Boss_Stuff/idle.gd" id="6_mxgid"]
[ext_resource type="Script" uid="uid://cv51tddad36k4" path="res://scripts/sprites/Boss_Stuff/attack.gd" id="7_182si"]
[ext_resource type="PackedScene" uid="uid://d1ynthtjuqnyr" path="res://scenes/sprites/bullet_enemy.tscn" id="8_7ymjk"]
[ext_resource type="Script" uid="uid://cgmof65wlyxwk" path="res://scripts/sprites/Boss_Stuff/dash.gd" id="8_esg0t"]
[ext_resource type="AudioStream" uid="uid://c1mlp82x7sx6" path="res://assets/sounds/sfx/clean-whoosh-effect-382719.mp3" id="9_5j8kn"]
[ext_resource type="Script" uid="uid://sr3cmbyydcly" path="res://scripts/sprites/Boss_Stuff/summon.gd" id="10_l6mgg"]
[ext_resource type="PackedScene" uid="uid://n6gllmlwh1xc" path="res://scenes/sprites/enemy_1.tscn" id="11_u4lc1"]
[ext_resource type="AudioStream" uid="uid://cyltayp5p5g62" path="res://assets/sounds/sfx/metal-whoosh-hit-7-201910.mp3" id="12_ypdpw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dq62l"]
shader = ExtResource("1_rbwnv")
shader_parameter/blink_color = Color(0, 0, 0, 1)
shader_parameter/blink_intensity = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ejytf"]
resource_local_to_scene = true
shader = ExtResource("1_rbwnv")
shader_parameter/blink_color = Color(1, 1, 1, 1)
shader_parameter/blink_intensity = 0.0

[sub_resource type="Gradient" id="Gradient_ejytf"]
offsets = PackedFloat32Array(0.0485437, 0.296117, 0.490291, 1)
colors = PackedColorArray(0.75118, 0.29996, 0.247146, 1, 0.771546, 0.149108, 0.076254, 1, 0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ejytf"]
gradient = SubResource("Gradient_ejytf")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qnbj4"]
radius = 0.5625
height = 2.5

[sub_resource type="Animation" id="Animation_r3bxh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/BossTexture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2cdgk"]
resource_name = "dash_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/BossTexture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"dash_activated"
}]
}

[sub_resource type="Animation" id="Animation_wqpjq"]
resource_name = "dash_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/BossTexture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"dash_activated"
}]
}

[sub_resource type="Animation" id="Animation_qnbj4"]
resource_name = "idle_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/BossTexture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"dash_deactivated"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qsl3t"]
_data = {
&"RESET": SubResource("Animation_r3bxh"),
&"dash_left": SubResource("Animation_2cdgk"),
&"dash_right": SubResource("Animation_wqpjq"),
&"idle_down": SubResource("Animation_qnbj4")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_d3026"]
radius = 119.419

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5f346"]
radius = 11.0
height = 64.0

[node name="Boss" type="CharacterBody2D" groups=["Enemy"]]
material = SubResource("ShaderMaterial_dq62l")
collision_layer = 2
collision_mask = 2
script = ExtResource("2_7ymjk")

[node name="Visual" type="Node2D" parent="."]
position = Vector2(0, 19)

[node name="LShadow" type="Sprite2D" parent="Visual"]
position = Vector2(0, -2)
texture = ExtResource("3_sw4a1")

[node name="BossTexture" type="Sprite2D" parent="Visual"]
material = SubResource("ShaderMaterial_ejytf")
position = Vector2(1, -20)
texture = ExtResource("4_7jxvu")
hframes = 4

[node name="PointLight2D" type="PointLight2D" parent="Visual"]
position = Vector2(0, -18)
scale = Vector2(1.9375, 1.88514)
texture = SubResource("GradientTexture2D_ejytf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(16, 16)
shape = SubResource("CapsuleShape2D_qnbj4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qsl3t")
}
autoplay = "idle_down"

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -2)

[node name="Bullet_Hitbox" type="Area2D" parent="."]
position = Vector2(0, 12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullet_Hitbox"]
position = Vector2(0, -11)
scale = Vector2(16, 16)
shape = SubResource("CapsuleShape2D_qnbj4")

[node name="Attack_Range" type="Area2D" parent="."]
position = Vector2(0, 12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Range"]
shape = SubResource("CircleShape2D_d3026")

[node name="Dash_Hitbox" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dash_Hitbox"]
rotation = 1.57079
shape = SubResource("CapsuleShape2D_5f346")

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("5_nwhtm")

[node name="Idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("6_mxgid")

[node name="Attack" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("7_182si")
BULLET_ENEMY = ExtResource("8_7ymjk")

[node name="Start_delay" type="Timer" parent="FiniteStateMachine/Attack"]
wait_time = 2.0

[node name="Fire_delay" type="Timer" parent="FiniteStateMachine/Attack"]
wait_time = 0.2

[node name="Dash" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("8_esg0t")

[node name="Start_delay" type="Timer" parent="FiniteStateMachine/Dash"]
wait_time = 2.0

[node name="Dash_sfx" type="AudioStreamPlayer" parent="FiniteStateMachine/Dash"]
stream = ExtResource("9_5j8kn")
volume_db = 7.0
pitch_scale = 1.3
bus = &"sfx"

[node name="Warning_delay" type="Timer" parent="FiniteStateMachine/Dash"]
wait_time = 1.5

[node name="Flashing_delay" type="Timer" parent="FiniteStateMachine/Dash"]
wait_time = 0.2

[node name="Summon" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("10_l6mgg")
enemy_1 = ExtResource("11_u4lc1")

[node name="Start_delay" type="Timer" parent="FiniteStateMachine/Summon"]
wait_time = 1.5

[node name="Transition_delay" type="Timer" parent="FiniteStateMachine/Summon"]
wait_time = 3.0

[node name="Hit_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_ypdpw")
volume_db = -20.0
pitch_scale = 1.5
bus = &"sfx"

[connection signal="area_entered" from="Bullet_Hitbox" to="." method="_on_bullet_hitbox_area_entered"]
[connection signal="body_entered" from="Attack_Range" to="FiniteStateMachine/Idle" method="_on_attack_range_body_entered"]
[connection signal="body_entered" from="Dash_Hitbox" to="." method="_on_dash_hitbox_body_entered"]
